vanilla: no-flag watcher injector + dual-mode pure agent (agentmain), 98% mixin coverage
Watcher (:vanillaWatcherJar) — a standalone injector the user runs first: warm poller that
detects a vanilla MC JVM and attaches the pure LB agent in the early SIGQUIT window (before
GLFW drops the signal), so LB injects into stock MC started with NO flags (no -javaagent, no
--add-opens, no launcher). Separate-process attach (the allowed model).

Pure agent made dual-mode + flag-free:
- agentmain == premain (dynamic-attach entrypoint).
- opens java.base/java.lang to itself via Instrumentation.redefineModule, so reflective
  defineClass (synthetic injection) + ProcessEnvironment (offline MCEF) need NO launch
  --add-opens -- essential for the no-flag attach model (and removes the flag for -javaagent too).
- CFT now only touches net.minecraft.*/com.mojang.* -- never JDK/system classes; when attached
  during the signed MC jar's verification it would otherwise hit ClassCircularityError on
  sun.security.* and kill MC.
- idempotent (one arm).

Verified end-to-end: watcher + no-flag stock MC -> attach at ~1.0-1.2s (6/6 runs), Launching
LiquidBounce v0.38.1, 39 pipelines, CefBrowser visible=true ready, MCEF menu renders offline
(0 downloads), 0 synthetic CNF / signer / mixin-fail / circularity.

Coverage gap measured: of LB's 151 @Mixin target classes, only 3 load before the ~1.1s attach
(net.minecraft.network.chat.{Style,MutableComponent,contents.TranslatableContents} -> mixins
MixinStyleAccessor/MixinMutableComponent/MixinTranslatableContents); the other 148 load after
2s and are caught. ~98% coverage; -javaagent/premain has no gap. Caveat: this VM's slow
software-GL boot makes the window generous -- a fast machine's window is narrower. See
docs/vanilla-agent-selfcontained/watcher/README.md.